test/syntax/valid/13_string_args.sg
// String literals as function arguments.
import io

io.print("hello, world")
io.print("with spaces and punctuation: !@#")
io.print("")
