test/syntax/errors/05_unknown_char.sg
// expect-error: illegal characters
// The '@' character is not part of the Seagrass alphabet.
import io

io.print("hello") @ io.print("world")
